--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -29,7 +29,7 @@ jobs:
         SESSION: ${{ secrets.SESSION }}
       run: | 
         echo -n `date +%Y-%m-%d\ %H:%M:%S`\ -\ >> ./run.log 
-        curl https://api.sockboom.cc/client/checkin?token=$SESSION >> ./run.log
+        curl https://api.sockboom.cc/client/checkin?token="$SESSION" >> ./run.log
         echo >> ./run.log
         tail run.log #避免日志上传失败丢失日志
     - name: Commit #上传日志到仓库
